...
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:backgroundTint="@color/white"
            android:hint="@string/login_password" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="299dp"
            android:layout_height="69dp"
            android:layout_margin="6dp"
            android:backgroundTint="@color/green_200"
            android:text="@string/login_button"
            android:textColor="@color/white" />
...
