...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/participate_button"
        android:layout_width="333dp"
        android:layout_height="55dp"
        android:layout_marginBottom="80dp"
        android:backgroundTint="@color/green_200"
        android:text="@string/deltager"
        android:onClick="participateButton"
...
