...
                android:textSize="15sp"
                android:background="@null"
                android:inputType="textPersonName"
                android:padding="5sp" />

            <Button
                android:id="@+id/sendMessageButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/green_200"
                android:text="send" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
