...
            android:textAlignment="center"
            android:textColor="#0C4819"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="100dp"
        android:layout_height="120dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="65dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView25">

        <ImageButton
            android:id="@+id/imageButton8"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="#E2FFDD"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/ic_groupchat" />

...
